# ModMe-Docs-template

./: .readthedocs.yaml  package.json  requirements.txt  tree.txt
ModMe_DatScience/: LICENSE  Makefile  README.md  setup.py
ModMe_DatScience/docs/: Makefile  conf.py  index.rst  make.bat
modify_me/: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
modify_me/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
modify_me/src/modify_me/: __init__.py  cli.py
modify_me/tests/: __init__.py  test_modify_me.py
