[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modify_me"
version = "0.0.1"
description = "An AI + ML project for the students capstone MBA project. Use caution when testing this package, as the author has very little experience."
readme = "README.rst"
authors = [
  {name = "Dylan Thomas", email = "dylan.work190@gmail.com"}
]
maintainers = [
  {name = "Dylan Thomas", email = "dylan.work190@gmail.com"}
]
classifiers = [

]
license = {text = "Apache Software License 2.0"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Ditto190/modify_me/issues"
changelog = "https://github.com/Ditto190/modify_me/blob/master/changelog.md"
homepage = "https://github.com/Ditto190/modify_me"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

